Correct toList returning